Fixed spacing issues on landing page

--- a/src/landing-page/landing-page.scss
+++ b/src/landing-page/landing-page.scss
@@ -6,14 +6,27 @@ $borderColor: #D9D9D9;
 
 @media (min-width: 768px) {
 
+  .landing-page {
+    top: 125px;
+  }
+
+
   .landing-page__header__links {
     right: 10%;
   }
   .landing-page__header__home__link {
      display: inline;
   }
+  .landing-page__header__links {
+    margin: 20px auto;
+  }
 }
 @media (max-width: 767px) {
+
+  .landing-page {
+    top: 75px;
+  }
+
 
   .landing-page__header--isScrolling {
     .landing-page__header__home__link {
@@ -21,19 +34,20 @@ $borderColor: #D9D9D9;
     }
   }
   .landing-page__header__links {
+    margin: auto;
     width: 100%;
     display: flex;
     justify-content: space-around;
   }
 }
+
 .landingPage--isScrolling {
   padding-top: 125px;
-
 }
+
 
 .landing-page {
 
-  top: 125px;
   position: absolute;
    .landing-page__header--notScrolling {
      .landing-page__header__home__icon {
@@ -41,10 +55,6 @@ $borderColor: #D9D9D9;
      }
 
      .landing-page__header__links {
-       margin-top: 40px;
-       margin-bottom: 40px;
-       margin-left: auto;
-       margin-right: auto;
        display: flex;
        right: 10%;
        max-width: 300px;
